--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="about-content">
             <div class="about-text">
                 <h2>Наша история</h2>
-                <p>Кофейня "Куба" открыла свои двери в 2010 году с целью привнести культуру качественного кофе в Москву. За 13 лет мы стали любимым местом для ценителей настоящего кофе.</p>
+                <p>Кофейня "Куба" открыла свои двери в 2010 году с целью привнести культуру качественного кофе в Кемерово. За 15 лет мы стали любимым местом для ценителей настоящего кофе.</p>
                 <a href="contact.html" class="btn">Узнать больше</a>
             </div>
             <img style="margin: 5%; border-radius: 5%; width: 100%; height: auto" src="int.jpg" alt="Интерьер кофейни">
