--- a/reservation.html
+++ b/reservation.html
@@ -6,6 +6,34 @@
     <title>Куба - кофейня</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        .form-group.checkbox {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            margin-bottom: 15px;
+        }
+        .form-group.checkbox label {
+            margin: 0;
+            font-size: 14px;
+        }
+        .form-group.checkbox a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        .form-group.checkbox a:hover {
+            text-decoration: underline;
+        }
+        .error {
+            border-color: red !important;
+        }
+        .error-message {
+            color: red;
+            font-size: 12px;
+            margin-top: 5px;
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -29,18 +57,21 @@
         <div class="reservation-info">
             <p>Забронируйте столик заранее и получите бесплатный десерт к первому заказу!</p>
         </div>
-        <form id="bookingForm">
+        <form id="bookingForm" novalidate>
             <div class="form-group">
                 <label for="name">Ваше имя</label>
-                <input type="text" id="name" placeholder="Иван Иванов" required>
+                <input type="text" id="name" placeholder="Иван Иванов" pattern="[A-Za-zА-Яа-я\s]{1,50}" maxlength="50" required>
+                <div class="error-message" id="nameError">Имя может содержать только буквы и пробелы, до 50 символов</div>
             </div>
             <div class="form-group">
                 <label for="phone">Телефон</label>
-                <input type="tel" id="phone" placeholder="+7 (999) 123-45-67" required>
+                <input type="tel" id="phone" placeholder="+7 (999) 123-45-67" pattern="\+7\s?\(\d{3}\)\s?\d{3}-\d{2}-\d{2}" required>
+                <div class="error-message" id="phoneError">Введите номер в формате +7 (999) 123-45-67</div>
             </div>
             <div class="form-group">
                 <label for="date">Дата и время</label>
                 <input type="datetime-local" id="date" required>
+                <div class="error-message" id="dateError">Выберите дату и время в пределах рабочих часов</div>
             </div>
             <div class="form-group">
                 <label for="guests">Количество гостей</label>
@@ -51,10 +82,17 @@
                     <option value="3-4">3-4 человека</option>
                     <option value="5+">5 и более</option>
                 </select>
+                <div class="error-message" id="guestsError">Выберите количество гостей</div>
             </div>
             <div class="form-group">
                 <label for="comment">Особые пожелания</label>
-                <textarea id="comment" rows="3"></textarea>
+                <textarea id="comment" rows="3" maxlength="500"></textarea>
+                <div class="error-message" id="commentError">Сообщение не должно превышать 500 символов</div>
+            </div>
+            <div class="form-group checkbox">
+                <input type="checkbox" id="bookingPrivacy" required>
+                <label for="bookingPrivacy">Я согласен с <a href="privacy.html" target="_blank">политикой конфиденциальности</a></label>
+                <div class="error-message" id="bookingPrivacyError">Необходимо согласиться с политикой конфиденциальности</div>
             </div>
             <button type="submit" class="btn">Забронировать</button>
         </form>
@@ -79,7 +117,7 @@
     </section>
 
     <footer>
-    <div class="footer-content">
+        <div class="footer-content">
             <div class="footer-section">
                 <h3>Часы работы</h3>
                 <p>Пн-Пт: 8:00 - 22:00</p>
@@ -94,8 +132,14 @@
             </div>
             <div class="footer-section">
                 <h3>Подписка</h3>
-                <form id="subscribeForm">
-                    <input type="email" placeholder="Ваш email" required>
+                <form id="subscribeForm" novalidate>
+                    <input type="email" placeholder="Ваш email" maxlength="100" required>
+                    <div class="error-message" id="subscribeEmailError">Введите действительный email</div>
+                    <div class="form-group checkbox">
+                        <input type="checkbox" id="subscribePrivacy" required>
+                        <label for="subscribePrivacy">Я согласен с <a href="privacy.html" target="_blank">политикой конфиденциальности</a></label>
+                        <div class="error-message" id="subscribePrivacyError">Необходимо согласиться с политикой конфиденциальности</div>
+                    </div>
                     <button type="submit" class="btn">Подписаться</button>
                 </form>
                 <div class="social-links">
@@ -109,6 +153,144 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script>
+        // Set minimum date for datetime-local input
+        const dateInput = document.getElementById('date');
+        const today = new Date();
+        const minDate = new Date(today.getTime() - today.getTimezoneOffset() * 60000).toISOString().slice(0, 16);
+        dateInput.setAttribute('min', minDate);
+
+        // Form validation for booking form
+        document.getElementById('bookingForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            let isValid = true;
+
+            // Name validation
+            const name = document.getElementById('name');
+            const nameError = document.getElementById('nameError');
+            const nameRegex = /^[A-Za-zА-Яа-я\s]{1,50}$/;
+            if (!nameRegex.test(name.value)) {
+                name.classList.add('error');
+                nameError.style.display = 'block';
+                isValid = false;
+            } else {
+                name.classList.remove('error');
+                nameError.style.display = 'none';
+            }
+
+            // Phone validation
+            const phone = document.getElementById('phone');
+            const phoneError = document.getElementById('phoneError');
+            const phoneRegex = /^\+7\s?\(\d{3}\)\s?\d{3}-\d{2}-\d{2}$/;
+            if (!phoneRegex.test(phone.value)) {
+                phone.classList.add('error');
+                phoneError.style.display = 'block';
+                isValid = false;
+            } else {
+                phone.classList.remove('error');
+                phoneError.style.display = 'none';
+            }
+
+            // Date and time validation
+            const date = document.getElementById('date');
+            const dateError = document.getElementById('dateError');
+            const selectedDate = new Date(date.value);
+            const day = selectedDate.getDay();
+            const hours = selectedDate.getHours();
+            const minutes = selectedDate.getMinutes();
+            let isValidTime = false;
+
+            // Check operating hours based on day
+            if (day >= 1 && day <= 5) { // Mon-Fri: 8:00 - 22:00
+                isValidTime = hours >= 8 && (hours < 22 || (hours === 22 && minutes === 0));
+            } else if (day === 6) { // Sat: 9:00 - 00:00
+                isValidTime = hours >= 9 && (hours < 24 || (hours === 0 && minutes === 0));
+            } else if (day === 0) { // Sun: 10:00 - 23:00
+                isValidTime = hours >= 10 && (hours < 23 || (hours === 23 && minutes === 0));
+            }
+
+            if (!date.value || selectedDate < today || !isValidTime) {
+                date.classList.add('error');
+                dateError.style.display = 'block';
+                isValid = false;
+            } else {
+                date.classList.remove('error');
+                dateError.style.display = 'none';
+            }
+
+            // Guests validation
+            const guests = document.getElementById('guests');
+            const guestsError = document.getElementById('guestsError');
+            if (!guests.value) {
+                guests.classList.add('error');
+                guestsError.style.display = 'block';
+                isValid = false;
+            } else {
+                guests.classList.remove('error');
+                guestsError.style.display = 'none';
+            }
+
+            // Comment validation
+            const comment = document.getElementById('comment');
+            const commentError = document.getElementById('commentError');
+            if (comment.value.length > 500) {
+                comment.classList.add('error');
+                commentError.style.display = 'block';
+                isValid = false;
+            } else {
+                comment.classList.remove('error');
+                commentError.style.display = 'none';
+            }
+
+            // Privacy checkbox validation
+            const privacy = document.getElementById('bookingPrivacy');
+            const privacyError = document.getElementById('bookingPrivacyError');
+            if (!privacy.checked) {
+                privacyError.style.display = 'block';
+                isValid = false;
+            } else {
+                privacyError.style.display = 'none';
+            }
+
+            if (isValid) {
+                alert('Бронирование успешно отправлено!');
+                this.reset();
+            }
+        });
+
+        // Form validation for subscription form
+        document.getElementById('subscribeForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            let isValid = true;
+
+            // Email validation
+            const email = this.querySelector('input[type="email"]');
+            const emailError = document.getElementById('subscribeEmailError');
+            const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+            if (!emailRegex.test(email.value)) {
+                email.classList.add('error');
+                emailError.style.display = 'block';
+                isValid = false;
+            } else {
+                email.classList.remove('error');
+                emailError.style.display = 'none';
+            }
+
+            // Privacy checkbox validation
+            const privacy = document.getElementById('subscribePrivacy');
+            const privacyError = document.getElementById('subscribePrivacyError');
+            if (!privacy.checked) {
+                privacyError.style.display = 'block';
+                isValid = false;
+            } else {
+                privacyError.style.display = 'none';
+            }
+
+            if (isValid) {
+                alert('Вы успешно подписались!');
+                this.reset();
+            }
+        });
+    </script>
 </body>
 </html>
