--- a/privacy.html
+++ b/privacy.html
@@ -35,6 +35,67 @@
         .privacy-content ul li {
             margin-bottom: 10px;
         }
+        .form-group.checkbox {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            margin-bottom: 15px;
+        }
+        .form-group.checkbox label {
+            margin: 0;
+            font-size: 14px;
+        }
+        .form-group.checkbox a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        .form-group.checkbox a:hover {
+            text-decoration: underline;
+        }
+        .error {
+            border-color: red !important;
+        }
+        .error-message {
+            color: red;
+            font-size: 12px;
+            margin-top: 5px;
+            display: none;
+        }
+        /* Hamburger menu styles */
+        .nav-links {
+            display: flex;
+        }
+        .burger {
+            display: none;
+            cursor: pointer;
+            font-size: 24px;
+        }
+        @media screen and (max-width: 768px) {
+            .burger {
+                display: block;
+            }
+            .nav-links {
+                display: none;
+                width: 100%;
+                position: absolute;
+                top: 70px;
+                left: 0;
+                background: #fff;
+                flex-direction: column;
+                align-items: center;
+                padding: 20px 0;
+                box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+            }
+            .nav-links.active {
+                display: flex;
+            }
+            .nav-links li {
+                margin: 10px 0;
+            }
+            .burger.active .fa-bars::before {
+                content: "\f00d"; /* Change to X icon when active */
+            }
+        }
     </style>
 </head>
 <body>
@@ -148,6 +209,24 @@
     </footer>
 
     <script>
+        // Hamburger menu toggle
+        const burger = document.querySelector('.burger');
+        const navLinks = document.querySelector('.nav-links');
+        const links = document.querySelectorAll('.nav-links a');
+
+        burger.addEventListener('click', () => {
+            navLinks.classList.toggle('active');
+            burger.classList.toggle('active');
+        });
+
+        // Close menu when a link is clicked
+        links.forEach(link => {
+            link.addEventListener('click', () => {
+                navLinks.classList.remove('active');
+                burger.classList.remove('active');
+            });
+        });
+
         // Form validation for subscription form
         document.getElementById('subscribeForm').addEventListener('submit', function(e) {
             e.preventDefault();
